syntax = "proto3";

package consensus;

option go_package = "/types/";

// TODO(olshansky): Work with andrew to generalize and merge type with the corresponding one in utility.
message BlockConsensusTemp {
  BlockHeaderConsensusTemp BlockHeader = 1;
  repeated bytes Transactions = 2;
}

// TODO(olshansky): Work with andrew to generalize and merge type with the corresponding one in utility.
message BlockHeaderConsensusTemp {
  int64 Height = 1;
  bytes Hash = 2;
  uint32 NumTxs = 3;
  string LastBlockHash = 4;
  bytes ProposerAddress = 5;
// TODO(discuss): The `QuorumCertificate` structure contains the `Block` inside of it so we end up with a two way relationship?
  bytes QuorumCertificate = 6;
}